load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "failureinjection",
    srcs = [
        "cpu_failures.go",
        "failures.go",
        "infra_failures.go",
        "network_failures.go",
        "storage_failures.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/failureinjection",
    visibility = ["//visibility:public"],
)
