load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "ficontroller_proto",
    srcs = [
        "api.proto",
        "controller.proto",
    ],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto:gogo_proto"],
)

go_library(
    name = "ficontroller_lib",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/ficontroller",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_lib_pq//:pq",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_proto_library(
    name = "ficontroller_go_proto",
    compilers = ["//pkg/cmd/protoc-gen-gogoroach:protoc-gen-gogoroach_grpc_compiler"],
    importpath = "github.com/cockroachdb/cockroach/ficontroller",
    proto = ":ficontroller_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto"],
)

go_test(
    name = "ficontroller_test",
    srcs = ["main_test.go"],
    embed = [":ficontroller"],
    deps = [
        "//pkg/fiplanner",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
