load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ficontroller_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/ficontroller",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ficontroller:ficontroller_lib",
        "@com_github_manifoldco_promptui//:promptui",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "ficontroller",
    embed = [":ficontroller_lib"],
    visibility = ["//visibility:public"],
)
