load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ficontroller_lib",
    srcs = [
        "logger.go",
        "runner.go",
        "server.go",
    ],
    embed = [":ficontroller_go_proto"],
    importpath = "github.com/cockroachdb/cockroach/pkg/ficontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/failureinjection",
        "//pkg/fiplanner",
        "//pkg/util/log",
        "//pkg/util/syncutil",
        "@com_github_cockroachdb_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_test(
    name = "ficontroller_test",
    srcs = ["main_test.go"],
    embed = [":ficontroller"],
    deps = [
        "//pkg/fiplanner",
        "@com_github_stretchr_testify//require",
    ],
)

go_library(
    name = "ficontroller",
    srcs = [
        "runner.go",
        "server.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/roachprod/ficontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/failureinjection",
        "//pkg/fiplanner",
        "//pkg/roachprod",
        "//pkg/roachprod/install",
        "//pkg/roachprod/logger",
        "//pkg/util/syncutil",
        "@com_github_cockroachdb_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
