load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "failureinjection",
    srcs = [
        "disk_stall.go",
        "network_partition.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachtest/roachtestutil/failureinjection",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachtest/cluster",
        "//pkg/cmd/roachtest/option",
        "//pkg/cmd/roachtest/roachtestutil",
        "//pkg/cmd/roachtest/spec",
        "//pkg/roachprod/failureinjection/failures",
        "//pkg/roachprod/install",
        "//pkg/roachprod/logger",
    ],
)
